# fatture-in-cloud-gestione-spese

./: .env.example  .gitignore  CLAUDE.md  README.md  fic-expenses  poc_create_expense.py  pyproject.toml
docs/: plan-specs-001.md
src/fic_expenses/: __init__.py  api.py  app.py  cli.py  config.py  display.py  models.py  prompts.py  utils.py
src/fic_expenses/dialogs/: __init__.py  pay.py
src/fic_expenses/dialogs/create/: __init__.py  wizard.py
src/fic_expenses/screens/: __init__.py  details.py  error.py  loading.py  settings.py
src/fic_expenses/styles/: app.tcss
src/fic_expenses/widgets/: __init__.py  expenses_table.py  filter_bar.py  quota_display.py  stats_panel.py  summary_bar.py
